--- a/style.css
+++ b/style.css
@@ -2,31 +2,40 @@ body{
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    color: #333;
+    color: #000000;
     line-height: 1.6;
-    background-image: url(https://images.unsplash.com/photo-1700728319861-5de7539c1eb9?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTEyfHxwaW5rJTIwYm9va3N8ZW58MHx8MHx8fDA%3D)
+    background-image: url(https://plus.unsplash.com/premium_photo-1677187301660-5e557d9c0724?w=700&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NXx8Ym9va3N8ZW58MHx8MHx8fDA%3D);
 }
 #library-container{
    
     max-width: 600px;
     margin: 50px auto;
     padding: 30px;
-    background: rgba(70, 10, 62, 0.4);
+    background: rgba(0, 0, 0, 0.45);
     border-radius: 8px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
 h1{
     text-align: center;
-    color: white;
+    color: black;
     font-weight: bold;
     font-style: italic;
+}
+h2{
+    text-align: center;
+    color: black;
+    font-weight: bold;
+    font-style: italic;
+    line-height: 1;
+
 }
 #new-book-form {
     margin: 10px;
     padding: 10px;
-    background: #e7d7d7;
+    background:#e4d7c1 ;
     border: 1px solid #ddd;
     border-radius: 12px;
+    width: auto;
 }
 
 #new-book-form div {
@@ -55,14 +64,56 @@ h1{
 #new-book-form button {
     display: inline-block;
     padding: 10px 15px;
-    background: #f87ffc;
-    color: #fff;
+    background: #B57170;
+    color: #ffffff;
     border: none;
     border-radius: 4px;
     cursor: pointer;
-    font-size: 16px;
+    font-size: 15px;
 }
 
 #new-book-form button:hover {
-    background: #c903a8;
+    background: #664140;
+}
+
+#books-display{
+    margin-top: 20px;
+    padding: 12px;
+    background-color: #f0f8ff; 
+    border: 0.5px solid #ccc;
+    border-radius: 12px;
+    width:40%;
+    
+}
+
+#books-display .book-card {
+    background-color: #e4d7c1; 
+    padding: 10px;
+    margin-bottom: 10px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    font-family: Arial, sans-serif; 
+    color: #000000; 
+}
+
+#books-display .book-card h3 {
+    color: #000000; 
+}
+
+#books-display .book-card p {
+    color: #000000;
+    font-size: 12px;
+}
+
+#books-display .book-card button {
+    background-color:#B57170 ;
+    color: #fff;
+    border: none;
+    border-radius: 4px;
+    padding: 5px 10px;
+    cursor: pointer;
+    font-size: 14px;
+}
+
+#books-display .book-card button:hover {
+    background-color:#664140;
 }
